[package]
name = "http_server"
version = "0.1.0"
authors = ["shuga2704@gmail.com"]
edition = "2024"
rust-version = "1.91"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
env_logger = "0.11.9"
log = "0.4.29"
thiserror = "1.0.38"                             # error handling
